# Oblivion-reverse

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: nightly-release.yml
docs/: building.md  monster_ai_discrepancies.md  oblivion_reverse_analysis.md  parity-plan.md  release-readme.html  spawn_manifest_notes.md  spawn_manifest_report.md
docs/manifests/: spawn_manifest.json  spawn_manifest_comparison.json
pack/: oblivion.c
references/HLIL/oblivion/interpreted/: README.md  arrays.json  arrays.md  strings.json  strings.md  sub_1000b150_map.json  summary.txt
references/HLIL/oblivion/split/: gamex86.dll_hlil_block9999_sub_10015750.txt
references/HLIL/oblivion/split/types/: gamex86.dll_hlil_type_00006_block.txt  gamex86.dll_hlil_type_00007_block.txt  gamex86.dll_hlil_type_00008_block.txt  gamex86.dll_hlil_type_00009_block.txt  gamex86.dll_hlil_type_00010_block.txt  gamex86.dll_hlil_type_00011_block.txt  gamex86.dll_hlil_type_00012_block.txt  gamex86.dll_hlil_type_00013_block.txt  gamex86.dll_hlil_type_00014_block.txt  gamex86.dll_hlil_type_00015_block.txt  gamex86.dll_hlil_type_00016_block.txt  gamex86.dll_hlil_type_00017_block.txt  gamex86.dll_hlil_type_00018_block.txt  gamex86.dll_hlil_type_00019_block.txt  gamex86.dll_hlil_type_00020_block.txt  gamex86.dll_hlil_type_00021_block.txt  gamex86.dll_hlil_type_00022_block.txt  gamex86.dll_hlil_type_00023_block.txt  gamex86.dll_hlil_type_00024_block.txt  gamex86.dll_hlil_type_00025_block.txt  gamex86.dll_hlil_type_00026_block.txt  gamex86.dll_hlil_type_00027_block.txt  gamex86.dll_hlil_type_00030_block.txt  gamex86.dll_hlil_type_00031_block.txt  gamex86.dll_hlil_type_00032_block.txt  gamex86.dll_hlil_type_struct_00001_DOS_Header.txt  gamex86.dll_hlil_type_struct_00002_Rich_Header.txt  gamex86.dll_hlil_type_struct_00003_COFF_Header.txt  gamex86.dll_hlil_type_struct_00004_PE32_Optional_Header.txt  gamex86.dll_hlil_type_struct_00005_Section_Header.txt  gamex86.dll_hlil_type_struct_00028_Import_Directory_Table.txt  gamex86.dll_hlil_type_struct_00029_Export_Directory_Table.txt
references/Konig/: g_oblivion_monster.cpp  m_oblivion_cyborg.cpp  m_oblivion_spider.cpp
references/misc_actor/: readme.txt
scripts/release/: nightly-linux.sh  nightly-macos.sh  nightly-windows.ps1  package-nightly.sh
src/common/: q_shared.c
src/game/: g_ai.c  g_camera.c  g_deatomizer.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_mission.c  g_monster.c  g_oblivion_defines.h  g_oblivion_monster.c  g_oblivion_monster.h  g_rtdu.c  g_rtrain.c  g_save.c  g_spawn.c  g_target.c  g_trigger.c  g_weapon.c  game.001  game.dsp  m_actor.c  m_actor.h  m_actor_anim.h  m_badass.c  m_cyborg.c  m_cyborg.h  m_gunner.c  m_kigrax.c  m_sentinel.c  m_spider.c  m_spider.h  m_supertank.c  p_client.c  p_view.c  p_weapon.c
src/linux/: Makefile.AXP  Makefile.i386
src/solaris/: Makefile.OLD  Makefile.Solaris
tests/: expected_spawn_manifest.json  expected_sub_1000b150_map.json  test_actor_chat_cooldown.py  test_actor_path_state_machine.py  test_actor_spawn_and_mission_persistence.py  test_cyborg_regression.py  test_hlil_parser_spawn_map.py  test_kigrax_regression.py  test_rtdu_reference.py  test_spawn_manifest.py  test_spider_regression.py
tests/fixtures/: spider_expected_behaviour.json
tools/: extract_spawn_manifest.py  interpret_hlil_split.py  spawn_manifest_combined.json  spawn_manifest_comparison.json
